AWS_Intro_to_Ansible/beginner/TF/network.tf
# Create a VPC
resource "aws_vpc" "main" {

  cidr_block = "10.0.0.0/16"
  tags = merge(local.tags,
    { Name = "main-vpc" }
  )
}

# Create a subnet
resource "aws_subnet" "main" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "10.0.1.0/24"

  tags = merge(local.tags,
    { Name = "main-subnet" }
  )
}

# Create a security group
resource "aws_security_group" "allow_ssh" {
  name        = "allow_ssh"
  description = "Allow SSH inbound traffic"
  vpc_id      = aws_vpc.main.id

  ingress {
    description = "SSH from anywhere"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(local.tags,
    { Name = "main-sg" }
  )
}

resource "aws_key_pair" "ansible_ssh_key" {
  key_name   = "ansible-ssh-key"
  public_key = file("../../../creds/id_rsa.pub")
}
